--- a/renderer/active.css
+++ b/renderer/active.css
@@ -14,8 +14,8 @@ span .time{
 .wrapper {
 	/*border: 1px solid green;*/
 	display: grid;
-	grid-template-columns: 100%;
-	grid-template-rows: 10% 80% 10%;
+	grid-template-columns: 20% 60% 20%;
+	/* grid-template-rows: 10% 80% 10%; */
 }
 
 button {
@@ -23,19 +23,21 @@ button {
 }
 
 .wrapper > div {
-	display: grid;
+	display: flex;
+	flex-direction: column;
 	border: 1px solid red;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 	padding: 10px;
 	font-family: 'Futura';
 	font-weight: bold;
 }
 
-.content {
+#body {
 	display: grid;
 	align-items: center;
 	justify-content: center;
+	grid-template-rows: 10% 80% 10%;
 }
 
 .header > div{
@@ -44,7 +46,11 @@ button {
 	padding: 0;
 }
 
-.content > div{
+#content {
+	min-height: 400px;
+}
+
+#content > div{
 	border: 1px solid green;
 	text-align: center;
 	padding: 0;
