--- a/renderer/active.css
+++ b/renderer/active.css
@@ -1,71 +1,104 @@
 html, body {
-	background-color: black;
-	color: white;
-	height: 100vh;
-}
-
-span .time{
-	display:inline-block;
-    width:100px;
-    background:blue;
-    text-align:center;
+		height: 100%;
+		padding: 10px;
 }
 
 .wrapper {
-	/*border: 1px solid green;*/
+	height: 100%;
 	display: grid;
-	grid-template-columns: 20% 60% 20%;
-	/* grid-template-rows: 10% 80% 10%; */
+	grid-template-columns: 1fr 1fr 50% 1fr 1fr;
+	grid-template-rows: 1fr 1fr 3fr 50% 3fr;
+	grid-gap: 10px;
+	
 }
 
-button {
-	grid-column: 1;
+* {
+	box-sizing: border-box;
+}
+
+.wrapper {
+	background-color: black;
+	font-family: sans-serif;
 }
 
 .wrapper > div {
-	display: flex;
-	flex-direction: column;
-	border: 1px solid red;
-	align-items: center;
-	justify-content: flex-start;
-	padding: 10px;
-	font-family: 'Futura';
+	border: 3px solid grey;
+}
+
+.box {
+	font-family: sans-serif;
+	color: white;
 	font-weight: bold;
+	text-align: center;	
+	font-size: 100%;
 }
-
-#body {
-	display: grid;
-	align-items: center;
-	justify-content: center;
-	grid-template-rows: 10% 80% 10%;
-}
-
-.header > div{
-	border: 1px solid blue;
-	text-align: center;
-	padding: 0;
-}
-
-#content {
-	min-height: 400px;
-}
-
-#content > div{
-	border: 1px solid green;
-	text-align: center;
-	padding: 0;
-}
-
-
 .clock {
-	font-size: 1000%;
+	grid-column: 3/4;
+	grid-row: 1/2;
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
+	align-items: end;
 }
 
 .date {
-	font-size: 450%;
+	grid-column: 3/4;
+	grid-row: 2/3;
 }
 
-.blink {
+.user {
+	grid-column: 1/3;
+	grid-row: 1/4;
+}
+
+.user img {
+	max-width: 50%;
+	max-height: 50%;
+}
+
+.weather {
+	grid-column: 4/6;
+	grid-row: 1/4;
+}
+
+.dialog {
+	grid-column: 3/4;
+	grid-row: 3/4;
+}
+
+.content {
+	grid-column: 1/6; 
+	grid-row: 4/5;
+	font-size: 50%;
+}
+
+.content img {
+	max-width: 50%;
+	max-height: 50%;
+}
+
+.announcements {
+	grid-column: 1/6;
+	grid-row: 5/ 5;
+	padding: 10px;
+	font-size: 50%;
+}
+
+/* Clock elements css*/
+
+.hour {
+	grid-column: 1/2;
+	text-align: right;
+}
+
+.colon {
+	grid-column: 2/3;
+}
+
+.minutes {
+	text-align: left;
+}
+
+.colon {
   -webkit-animation: blink 2s steps(3, start) infinite;
   -moz-animation:    blink 2s steps(3, start) infinite;
   -o-animation:      blink 2s steps(3, start) infinite; 
