pre-merge updates for adding token access and data caching in mongoDB

--- a/renderer/active.css
+++ b/renderer/active.css
@@ -18,7 +18,7 @@ html, body {
 
 .wrapper {
 	background-color: black;
-	font-family: sans-serif;
+	font-family: "Futura PT", "Trebuchet MS", Arial, sans-serif;
 }
 
 .wrapper > div {
@@ -26,7 +26,7 @@ html, body {
 }
 
 .box {
-	font-family: sans-serif;
+	font-family: "Futura PT", "Trebuchet MS", Arial, sans-serif;
 	color: white;
 	font-weight: bold;
 	text-align: center;	
