--- a/renderer/main.css
+++ b/renderer/main.css
@@ -1,13 +1,14 @@
 html, body {
-		height: 100%;
-		padding: 10px;
+	height: 100%;
+	padding: 10px;
+	overflow: hidden;
 }
 
 .wrapper {
 	height: 100%;
 	display: grid;
-	grid-template-columns: 1fr 80% 1fr;
-	grid-template-rows: 1fr 1fr 70% 3fr;
+	grid-template-columns: 100px 1fr 80% 1fr 100px;
+	grid-template-rows: 2fr 1fr 60% 5fr;
 	grid-gap: 10px;
 
 }
@@ -30,29 +31,30 @@ html, body {
 	color: white;
 	font-weight: bold;
 	text-align: center;
-	font-size: 200%;
 }
 
 .clock {
-	grid-column: 2/3;
+	grid-column: 3/4;
 	grid-row: 1/2;
 	display: grid;
 	grid-template-columns: 1fr auto 1fr;
-	align-items: end;
+	align-items: middle;
+	font-size: 10vmin;
 }
 
 .date {
-	grid-column: 2/3;
+	grid-column: 3/4;
 	grid-row: 2/3;
+	font-size: 5vmin;
 }
 
 .marvin {
-	grid-column: 2/3;
+	grid-column: 3/4;
 	grid-row: 3/4;
 }
 
 .announcements {
-	grid-column: 1/5;
+	grid-column: 2/5;
 	grid-row: 4/ 4;
 	display: grid;
 	grid-template-rows: 1fr 1fr 1fr;
