added custom weather graphics, tinkered with cantina and adjusted some weather css

--- a/renderer/active.css
+++ b/renderer/active.css
@@ -167,6 +167,8 @@ html, body {
 	display: grid;
 	border: 1px solid teal;
 	grid-template-columns: repeat(3, 1fr);
+	/* align-items: center;
+	justify-content: center; */
 }
 
 #fore_location, .daycast {
