--- a/renderer/active.css
+++ b/renderer/active.css
@@ -2,7 +2,7 @@ html, body {
 		height: 100%;
 		width: 100%;
 		padding: 10px;
-		overflow: hidden;		
+		overflow: hidden;
 }
 
 .wrapper {
@@ -11,7 +11,7 @@ html, body {
 	grid-template-columns: 100px 1fr 40% 1fr 100px;
 	grid-template-rows: 1fr 1fr 3fr 50% 3fr;
 	grid-gap: 10px;
-	
+
 }
 
 * {
@@ -31,7 +31,7 @@ html, body {
 	font-family: "Futura PT", "Trebuchet MS", Arial, sans-serif;
 	color: white;
 	font-weight: bold;
-	text-align: center;	
+	text-align: center;
 	font-size: 100%;
 }
 
@@ -79,7 +79,7 @@ html, body {
 }
 
 .content {
-	grid-column: 2/5; 
+	grid-column: 2/5;
 	grid-row: 4/5;
 }
 
@@ -117,7 +117,7 @@ html, body {
 .colon {
   -webkit-animation: blink 2s steps(3, start) infinite;
   -moz-animation:    blink 2s steps(3, start) infinite;
-  -o-animation:      blink 2s steps(3, start) infinite; 
+  -o-animation:      blink 2s steps(3, start) infinite;
   animation:         blink 2s steps(3, start) infinite;
 }
 
@@ -189,7 +189,7 @@ html, body {
 /* weather by location css */
 .weather_location {
 	width: 600px;
-	grid-template-rows: repeat(4, 1fr);	
+	grid-template-rows: repeat(4, 1fr);
 }
 
 .weather_location img {
@@ -202,6 +202,32 @@ html, body {
 
 #wl_location {
 	font-size: 6vmin;
+}
+
+/* word of a day css */
+
+.word {
+	padding: 30px;
+	padding-bottom: 10px;
+	padding-right: 30px;
+	text-align: left;
+	font-size: 200%;
+}
+
+.word_definition {
+	padding-left: 30px;
+	padding-top: 10px;
+	padding-left: 30px;
+	text-align: left;
+	font-size: 100%;
+}
+
+.word_example {
+	padding: 30px;
+	padding-top: 50px;
+	text-align: left;
+	font-size: 100%;
+	font-style: italic;
 }
 
 /* maps css */
