--- a/renderer/active.css
+++ b/renderer/active.css
@@ -1,26 +1,32 @@
 html, body {
-		height: 100%;
-		width: 100%;
-		padding: 10px;
-		overflow: hidden;		
+	height: 100%;
+	width: 100%;
+	padding: 10px;
+	overflow: hidden;
+	position: relative;		
 }
 
 .wrapper {
 	height: 100%;
 	display: grid;
 	grid-template-columns: 100px 1fr 40% 1fr 100px;
-	grid-template-rows: 1fr 1fr 3fr 50% 3fr;
+	grid-template-rows: 2fr 1fr 2fr 55% 3fr;
 	grid-gap: 10px;
-	
+	position: relative;
+
 }
 
 * {
 	box-sizing: border-box;
+	font-family: 'Lato', sans-serif;
+	letter-spacing: 1.4;
+	word-spacing: 2.5;
+	line-height: 1.25;
+	color: white;
 }
 
 .wrapper {
 	background-color: black;
-	font-family: "Futura PT", "Trebuchet MS", Arial, sans-serif;
 }
 
 .wrapper > div {
@@ -28,7 +34,6 @@ html, body {
 }
 
 .box {
-	font-family: "Futura PT", "Trebuchet MS", Arial, sans-serif;
 	color: white;
 	font-weight: bold;
 	text-align: center;	
@@ -58,7 +63,7 @@ html, body {
 
 .user {
 	grid-column: 2/3;
-	grid-row: 1/4;
+	grid-row: 1/3;
 }
 
 .user img {
@@ -68,13 +73,13 @@ html, body {
 
 .weather {
 	grid-column: 4/5;
-	grid-row: 1/4;
+	grid-row: 1/3;
 	display: grid;
 	align-items: start;
 }
 
 .dialog {
-	grid-column: 3/4;
+	grid-column: 2/5;
 	grid-row: 3/4;
 }
 
@@ -115,41 +120,35 @@ html, body {
 }
 
 .colon {
-  -webkit-animation: blink 2s steps(3, start) infinite;
-  -moz-animation:    blink 2s steps(3, start) infinite;
-  -o-animation:      blink 2s steps(3, start) infinite; 
-  animation:         blink 2s steps(3, start) infinite;
+  animation: blink 2s steps(3, start) infinite;
 }
 
-@-webkit-keyframes blink {
-  to { visibility: hidden; }
-}
-@-moz-keyframes blink {
-  to { visibility: hidden; }
-}
-@-o-keyframes blink {
-  to { visibility: hidden; }
-}
 @keyframes blink {
   to { visibility: hidden; }
 }
 
 /* Cantina elements css */
-.spacing {
-	height: 20px;
+.cantina .spacing {
+	height: 1.5rem;
 }
 
 .cantina_hours {
 	font-size: 150%;
 }
 
-.meal {
-	font-size: 200%;
-	padding: 20px;
+.cantina .meal {
+	text-transform: uppercase;
+	font-size: 1.5rem;
+	padding: 1.4rem;
+}
+
+.cantina .cafe {
+	text-transform: capitalize;
+	text-decoration: underline;
 }
 
 #cantina_greet {
-	font-size: 250%;
+	font-size: 2rem;
 	text-decoration: underline;
 	text-transform: uppercase;
 }
@@ -161,14 +160,32 @@ html, body {
 	display: grid;
 	grid-template-rows: repeat(6, 1fr);
 	grid-gap: 10px;
+	transition: all .4s;
 }
 
 .daycast {
 	display: grid;
-	border: 1px solid teal;
+	/* border: 1px solid teal; */
 	grid-template-columns: repeat(3, 1fr);
 	/* align-items: center;
 	justify-content: center; */
+}
+
+.daycast > div {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.daycast--0,
+.daycast--2,
+.daycast--4 {
+	animation: moveInRight 1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.daycast--1,
+.daycast--3 {
+	animation: moveInLeft 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 #fore_location, .daycast {
@@ -207,4 +224,412 @@ html, body {
 /* maps css */
 .map img {
     height: 60vmin;
+}
+
+/* authors */
+.author-wrapper {
+	height: 40vh;
+	width: 30vh;
+	display: inline-block;
+	/* background-color: orangered; */
+	background-size: cover;
+    background-position: top;
+    position: relative;
+}
+
+.row {
+	height: 47%;
+	max-width: 100%;
+	margin: 0 auto;
+	/* background-color: blue; */
+	background-size: cover;
+	background-position: top;
+	position: relative;
+}
+
+.row:not(:last-child) {
+	margin-bottom: 8%;
+}
+
+.row::after {
+	/* creating an pseudo element that is empty */
+	content: "";
+	/* table */
+	display: table;
+	/* clears any float elements around it may have */
+	clear: both;
+}
+
+.row .col-1-of-2 {
+	display: inline-block;
+	height: 100%;
+	width: 40%;
+	/* background-color: green; */
+	background-size: cover;
+	background-position: top;
+	overflow: hidden;
+	/* float: left; */
+
+	font-size: 1.2vh;
+}
+
+.row .col-1-of-2:not(:last-child) {
+	margin-right: 10%;
+}
+
+.row .col-1-of-2 > div:first-child {
+	height: 80%;
+	border: .3vh inset white;
+	box-shadow: 0 .3vh 5.3vh white;
+}
+
+.row .col-1-of-2 > div:last-child {
+	padding-top: 2%;
+}
+
+.nastya_z__pic {
+	background-image: url(../img/author/nastya_z.jpg);
+	background-size: cover;
+	
+}
+
+.eugeniu__pic {
+	background-image: url(../img/author/eugeniu.jpg);
+	background-size: cover;
+}
+
+.kyle__pic {
+	background-image: url(../img/author/kyle.jpg);
+	background-size: cover;
+}
+
+.nastya_d__pic {
+	background-image: url(../img/author/nastya_d.jpg);
+	background-size: cover;
+	position: relative;
+}
+
+/* .nastya_d__flag-wrapper {
+	height: 2vh;
+	width: 2vh;
+	float: right;
+	//transform: translateX(-3rem) translate(-3rem) skewX(12deg);
+	position: relative;
+	overflow: hidden;
+	border-radius: 50%;
+
+	//shape outside only works if dimensions are specified and object is floating
+	-webkit-shape-outside: circle(50% at 50% 50%);
+	shape-outside: circle(50% at 50% 50%);
+
+	-webkit-clip-path: circle(50% at 50% 50%);
+	clip-path: circle(50% at 50% 50%);
+}
+
+.nastya_d__flag-wrapper .nastya_d__flag-img {
+	height: 100%;
+	transform: scale(.6);
+	backface-visibility: hidden;
+	transition: all .5s;
+	z-index: 1000;
+} */
+
+/* authors animations */
+.row .nastya_z {
+	animation: moveInDownRight 1s ease-in-out;
+}
+
+.row .eugeniu {
+	animation: moveInDownLeft 1s ease-in-out;
+}
+
+.row .kyle {
+	animation: moveInUpRight 1s ease-in-out;
+}
+
+.row .nastya_d {
+	animation: moveInUpLeft 1s ease-in-out;
+}
+
+/* HELPER PROMPT */
+.dialog {
+	transition: all 1s;
+}
+
+.dialog .prompt {
+	position: relative;
+
+	/* this is really hacky */
+	/* height: 16vh; */
+
+	animation: zoomTowards 1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.prompt .prompt__text {
+	width: 80%;
+	font-size: 1.5vh;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/* PROJECTS */
+.best-projects {
+	display: block;
+	height: 80%;
+	width: 25vh;
+	
+	/* animation: zoomTowards 1s cubic-bezier(0.19, 1, 0.22, 1); */
+}
+
+.best-projects .best-projects__header,
+.best-projects .best-projects__person {
+	font-size: 1.5rem;
+	animation: zoomTowards 1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.best-projects .best-projects__person {
+	text-transform: capitalize;
+}
+
+.best-projects .best-projects__item{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-size: 1.8rem;
+	height: 6rem;
+	padding: 3.45rem 0px;
+}
+
+.best-projects .best-projects__item > div {
+	padding: 1rem;
+}
+.best-projects .best-projects__item > div:first-child {
+	width: 70%;
+	text-align: left;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#best-projects--0,
+#best-projects--2,
+#best-projects--4 {
+	animation: moveInRight 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+#best-projects--1,
+#best-projects--3 {
+	animation: moveInLeft 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.best-projects .best-projects__item > div:last-child {
+	width: 25%;
+	text-align: right;
+}
+
+/* POPUP FOR STUDENT SEARCH */
+
+.popup {
+	height: 100vh;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.805);
+	z-index: 1000;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+
+	/* opacity: 0;
+	visibility: hidden; */
+	transition: all .3s;
+}
+/* 
+.popup-visible {
+	opacity: 1;
+	visibility: visible;
+} */
+
+.popup button {
+	visibility: hidden;
+}
+
+.popup .popup__content {
+	width: 75%;
+	height: 20rem;
+	/* background-color: white; */
+	color: white;
+	text-align: center;
+	border-radius: 3px;
+	border: 2px inset white;
+	box-shadow: 0 0 2rem rgba(0,0,0,.4);
+	position: absolute;
+    top: 30%;
+}
+
+.popup .popup__content .popup__content--header {
+	text-transform: uppercase;
+	font-size: 2rem;
+	letter-spacing: 1.5;
+}
+
+.popup .popup__content .popup__form--entry-input {
+	background: none;
+	border: none;
+	text-align: center;
+	cursor: none;
+	color: white;
+	text-transform: lowercase;
+	transition: 0.4s width 0.2s, 0.1s height;
+	font-size: 4rem;
+}
+
+.popup .popup__content .popup__close:link,
+.popup .popup__content .popup__close:visited{
+	text-decoration: none;
+	color: white;
+}
+.popup .popup__content .popup__close--wrapper {
+	height: 4rem;
+	font-size: 3rem;
+}
+
+/* DEVELOPER BUTTONS */
+body .developer {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100px;
+}
+
+.actions input {
+	color: black;
+}
+
+.developer button,
+.actions button {
+	width: 100%;
+	display: block;
+	color: black;
+}
+
+/* ACTION BUTTONS */
+body .actions {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: block;
+	width: 100px;
+}
+
+/* ANIMATIONS */
+@keyframes moveInDownRight {
+    0% {
+        opacity: 0;
+        transform: translate(-5rem, -5rem);
+    }
+
+    80% {
+        transform: translate(1rem, 1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);      
+    }
+}
+
+@keyframes moveInDownLeft {
+    0% {
+        opacity: 0;
+        transform: translate(5rem, -5rem);
+    }
+
+    80% {
+        transform: translate(-1rem, 1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);      
+    }
+}
+
+@keyframes moveInUpLeft {
+    0% {
+        opacity: 0;
+        transform: translate(5rem, 5rem);
+    }
+
+    80% {
+        transform: translate(-1rem, -1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);      
+    }
+}
+
+@keyframes moveInUpRight {
+	0% {
+		opacity: 0;
+        transform: translate(-5rem, 5rem);
+    }
+	
+    80% {
+		transform: translate(1rem, -1rem);
+    }
+	
+    100% {
+		opacity: 1;
+        transform: translate(0);      
+    }
+}
+
+@keyframes moveInRight {
+	0% {
+		opacity: 0;
+        transform: translateX(-10rem);
+    }
+	
+    80% {
+		transform: translateX(2rem) scale(1.5);
+    }
+	
+    100% {
+		opacity: 1;
+        transform: translate(0) scale(1);      
+    }
+}
+
+@keyframes moveInLeft {
+	0% {
+		opacity: 0;
+        transform: translateX(10rem);
+    }
+	
+    80% {
+		transform: translateX(-2rem) scale(1.5);
+    }
+	
+    100% {
+		opacity: 1;
+        transform: translate(0) scale(1);      
+    }
+}
+
+@keyframes zoomTowards {
+	0% {
+		opacity: 0;
+		transform: scale(0);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);      
+	}
 }
