--- a/renderer/active.css
+++ b/renderer/active.css
@@ -1,133 +1,276 @@
-html, body {
-	height: 100%;
-	width: 100%;
-	padding: 10px;
-	overflow: hidden;
-	position: relative;		
+/* BASE CSS */
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
 }
 
-.wrapper {
-	height: 100%;
-	display: grid;
-	grid-template-columns: 100px 1fr 40% 1fr 100px;
-	grid-template-rows: 2fr 1fr 2fr 55% 3fr;
-	grid-gap: 10px;
-	position: relative;
-
+html {
+	font-size: 62.5%;
 }
 
-* {
+body {
 	box-sizing: border-box;
+	padding: 0rem;
+}
+
+/* TYPOGRAPHY */
+
+body {
 	font-family: 'Lato', sans-serif;
 	letter-spacing: 1.4;
 	word-spacing: 2.5;
-	line-height: 1.25;
+	line-height: 1.7;
+	text-align: center;
 	color: white;
-}
-
-.wrapper {
 	background-color: black;
 }
 
-.wrapper > div {
+.center-div {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* SECTIONS */
+
+.wrapper {
+	height: 100%;
+	display: grid;
+	grid-template-columns: 10rem 1fr 10rem;
+	grid-template-rows: 3fr 2fr 55% 3fr;
+	grid-gap: 1rem;
+	padding: 3rem 0;
+	position: relative;
+}
+
+.wrapper > div,
+.dashboard > div {
 	border: 3px solid grey;
 }
 
-.box {
-	color: white;
-	font-weight: bold;
-	text-align: center;
-	font-size: 100%;
-}
-
-.center_center, .weather, .content{
-	display: grid;
-	align-items: center;
-	justify-content: center;
-}
-
-.clock {
-	grid-column: 3/4;
+.dashboard {
 	grid-row: 1/2;
-	font-size: 8vmin;
+	grid-column: 2/3;
 	display: grid;
-	grid-template-columns: 1fr auto 1fr;
-	align-items: end;
+	grid-template-columns: 1fr 50% 1fr;
+	grid-template-rows: 100%;
+	grid-gap: 1rem;
+	/* padding-top: 3rem; */
+	position: relative;
 }
 
-.date {
-	grid-column: 3/4;
+.dialog {
+	grid-column: 2/3;
 	grid-row: 2/3;
-	font-size: 3vmin;
 }
+
+.content {
+	grid-column: 2/3;
+	grid-row: 3/4;
+	position: relative;
+}
+
+.content > div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.announcements {
+	grid-column: 2/3;
+	grid-row: 4/5;
+}
+
+/* -- MODULES -- */
+
+/* USER */
 
 .user {
-	grid-column: 2/3;
-	grid-row: 1/3;
+	grid-column: 1/2;
+	grid-row: 1/2;
+	font-size: 1.6rem;
+	line-height: 1.5;
 }
 
 .user img {
 	max-width: 50%;
 	max-height: 50%;
+	margin: 1rem;
 }
 
-.weather {
-	grid-column: 4/5;
-	grid-row: 1/3;
+/* DATE & TIME */
+
+.date-time {
+	grid-column: 2/3;
+	grid-row: 1/2;
+	font-weight: 700;
+}
+
+.date-time .clock {
+	font-size: 8rem;
+	line-height: .95;
 	display: grid;
-	align-items: start;
+	grid-template-columns: 1fr auto 1fr;
 }
 
-.dialog {
-	grid-column: 2/5;
-	grid-row: 3/4;
-}
-
-.content {
-	grid-column: 2/5;
-	grid-row: 4/5;
-}
-
-.content img {
-	max-width: 50%;
-	max-height: 50%;
-}
-
-.announcements {
-	grid-column: 2/5;
-	grid-row: 5/ 5;
-	padding: 10px;
-	font-size: 50%;
-}
-
-#marvin_command {
-	width: 600px;
-}
-
-/* Clock elements css*/
-
-.hour {
+.date-time .clock .hour {
 	grid-column: 1/2;
 	text-align: right;
 }
 
-.colon {
+.date-time .clock .colon {
 	grid-column: 2/3;
+	animation: blink 2s steps(3, start) infinite;
 }
 
-.minutes {
+.date-time .clock .minutes {
 	text-align: left;
 }
 
-.colon {
-  animation: blink 2s steps(3, start) infinite;
+.date-time .date {
+	font-size: 2.6rem;
 }
 
-@keyframes blink {
-  to { visibility: hidden; }
+/* TOP-RIGHT WEATHER */
+
+.weather {
+	grid-column: 3/4;
+	grid-row: 1/2;
+	position: relative;
 }
 
-/* Cantina elements css */
+.weather .weather-wrapper {
+	font-size: 2rem;
+}
+
+.weather .weather-wrapper img {
+	margin: 1rem;
+	height: 10rem;
+}
+
+/* HELPER PROMPT
+.dialog {
+	transition: all 1s;
+}
+
+.dialog .prompt {
+	position: relative;
+
+	animation: zoomTowards 1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.prompt .prompt__text {
+	width: 80%;
+	font-size: 1.5vh;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+} */
+
+/* CONTENT WEATHER */
+
+.weather-by-location {
+	font-size: 6.5rem;
+	font-weight: 600;
+}
+
+.weather-by-location > div img {
+	margin: 3rem;
+	height: 36rem;
+}
+
+/* FORECAST */
+
+.forecast_wrapper {
+	min-width: 50rem;
+	display: grid;
+	grid-template-rows: 10% repeat(5, 1fr);
+	grid-template-columns: 100%;
+	grid-gap: 1rem;
+	transition: all .4s;
+}
+
+.forecast_wrapper:first-child {
+	font-size: 3rem;
+}
+
+.forecast_wrapper .daycast {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 100%;
+	margin: 2rem 0;
+}
+
+.forecast_wrapper .daycast > div {
+	padding: 0 1rem;
+}
+
+.forecast_wrapper .daycast .fore_day,
+.forecast_wrapper .daycast .fore_temp {
+	position: relative;
+}
+
+.forecast_wrapper .daycast .fore_day > p,
+.forecast_wrapper .daycast .fore_temp > p{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.forecast_wrapper .daycast .fore_img img {
+	height: 10rem;
+}
+
+.daycast--0,
+.daycast--2,
+.daycast--4 {
+	animation: moveInRight 1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.daycast--1,
+.daycast--3 {
+	animation: moveInLeft 1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+/* LOCAL TIME */
+
+.locale {
+	font-size: 4rem;
+	line-height: 1;
+	min-width: 50rem;
+}
+
+.locale .clock {
+	font-size: 12rem;
+	line-height: .95;
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
+	margin: 3rem 0;
+}
+
+.locale .clock .hour {
+	grid-column: 1/2;
+	text-align: right;
+}
+
+.locale .clock .colon {
+	grid-column: 2/3;
+	animation: blink 2s steps(3, start) infinite;
+}
+
+.locale .clock .minutes {
+	text-align: left;
+}
+
+/* CANTINA */
+
 .cantina .spacing {
 	height: 1.5rem;
 }
@@ -153,106 +296,13 @@ html, body {
 	text-transform: uppercase;
 }
 
-/* Forecast elements css */
-.forecast_wrapper {
-	height: 80%;
-	min-width: 400px;
-	display: grid;
-	grid-template-rows: repeat(6, 1fr);
-	grid-gap: 10px;
-	transition: all .4s;
+/* HELP WITH COMMANDS */
+.help {
+	width: 80%;
+	font-size: 2rem;
 }
 
-.daycast {
-	display: grid;
-	/* border: 1px solid teal; */
-	grid-template-columns: repeat(3, 1fr);
-	/* align-items: center;
-	justify-content: center; */
-}
-
-.daycast > div {
-	display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.daycast--0,
-.daycast--2,
-.daycast--4 {
-	animation: moveInRight 1s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.daycast--1,
-.daycast--3 {
-	animation: moveInLeft 1s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-#fore_location, .daycast {
-	font-size: 2.5vmin;
-}
-
-/* weather top right css */
-#weather_wrapper {
-	max-height: 80%;
-	grid-template-rows: repeat(4, 1fr);
-	font-size: 2vmin;
-}
-
-#weather_wrapper img {
-	height: 7vmin;
-}
-
-/* weather by location css */
-.weather_location {
-	width: 600px;
-	grid-template-rows: repeat(4, 1fr);
-}
-
-.weather_location img {
-	height: 16vmin;
-}
-
-#wl_cur_temp, #wl_conditions {
-	font-size: 8vmin;
-}
-
-#wl_location {
-	font-size: 6vmin;
-}
-
-/* word of a day css */
-
-.word {
-	padding: 30px;
-	padding-bottom: 10px;
-	padding-right: 30px;
-	text-align: left;
-	font-size: 200%;
-}
-
-.word_definition {
-	padding-left: 30px;
-	padding-top: 10px;
-	padding-left: 30px;
-	text-align: left;
-	font-size: 100%;
-}
-
-.word_example {
-	padding: 30px;
-	padding-top: 50px;
-	text-align: left;
-	font-size: 100%;
-	font-style: italic;
-}
-
-/* maps css */
-.map img {
-    height: 60vmin;
-}
-
-/* authors */
+/* AUTHORS */
 .author-wrapper {
 	height: 40vh;
 	width: 30vh;
@@ -335,32 +385,6 @@ html, body {
 	position: relative;
 }
 
-/* .nastya_d__flag-wrapper {
-	height: 2vh;
-	width: 2vh;
-	float: right;
-	//transform: translateX(-3rem) translate(-3rem) skewX(12deg);
-	position: relative;
-	overflow: hidden;
-	border-radius: 50%;
-
-	//shape outside only works if dimensions are specified and object is floating
-	-webkit-shape-outside: circle(50% at 50% 50%);
-	shape-outside: circle(50% at 50% 50%);
-
-	-webkit-clip-path: circle(50% at 50% 50%);
-	clip-path: circle(50% at 50% 50%);
-}
-
-.nastya_d__flag-wrapper .nastya_d__flag-img {
-	height: 100%;
-	transform: scale(.6);
-	backface-visibility: hidden;
-	transition: all .5s;
-	z-index: 1000;
-} */
-
-/* authors animations */
 .row .nastya_z {
 	animation: moveInDownRight 1s ease-in-out;
 }
@@ -377,27 +401,46 @@ html, body {
 	animation: moveInUpLeft 1s ease-in-out;
 }
 
-/* HELPER PROMPT */
-.dialog {
-	transition: all 1s;
+.help h2 {
+	font-size: 4rem;
+	margin: 3rem;
 }
 
-.dialog .prompt {
-	position: relative;
+/* word of a day css */
 
-	/* this is really hacky */
-	/* height: 16vh; */
-
-	animation: zoomTowards 1s cubic-bezier(0.19, 1, 0.22, 1);
+.word {
+	padding: 30px;
+	padding-bottom: 10px;
+	padding-right: 30px;
+	text-align: left;
+	font-size: 200%;
 }
 
-.prompt .prompt__text {
-	width: 80%;
-	font-size: 1.5vh;
-	position: absolute;
-    top: 50%;
-    left: 50%;
-	transform: translate(-50%, -50%);
+.word_definition {
+	padding-left: 30px;
+	padding-top: 10px;
+	padding-left: 30px;
+	text-align: left;
+	font-size: 100%;
+}
+
+.word_example {
+	padding: 30px;
+	padding-top: 50px;
+	text-align: left;
+	font-size: 100%;
+	font-style: italic;
+}
+
+/* SHOW STUDENT */
+.student {
+	font-size: 3rem;
+	width: 50rem;
+}
+
+.student > div img {
+	max-height: 28rem;
+	margin: 3rem;
 }
 
 /* PROJECTS */
@@ -552,6 +595,11 @@ body .actions {
 }
 
 /* ANIMATIONS */
+
+@keyframes blink {
+	to { visibility: hidden; }
+}
+
 @keyframes moveInDownRight {
     0% {
         opacity: 0;
@@ -659,3 +707,16 @@ body .actions {
 		transform: scale(1);      
 	}
 }
+
+/* STANDARDS */
+
+/*
+
+-- CENTERING --
+
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+
+*/
