--- a/renderer/active.css
+++ b/renderer/active.css
@@ -714,6 +714,8 @@ body .actions {
 	to { background-color: black; }
 }
 
+/* 42 MAP */
+
 :root {
 	--size: 1fr;
 	--width: 30;
@@ -780,6 +782,10 @@ body .actions {
 .user_position img{
 	max-width: 300%;
 	max-height: 300%;
+}
+
+#not_found {
+	font-size: 2rem;
 }
 
 /* STANDARDS */
