--- a/renderer/main.css
+++ b/renderer/main.css
@@ -55,7 +55,7 @@ html, body {
 
 .announcements {
 	grid-column: 2/5;
-	grid-row: 4/ 4;
+	grid-row: 4/4;
 	display: grid;
 	grid-template-rows: 1fr 1fr 1fr;
 	padding: 10px;
@@ -69,8 +69,10 @@ html, body {
 }
 .posts img {
 	grid-column: 1/2;
-	max-width: 90%;
-	max-height: 90%;
+	/* max-width: 90%;
+	max-height: 90%; */
+	height: 50px;
+	width: 50px;
 }
 
 .post_text {
