--- a/renderer/main.css
+++ b/renderer/main.css
@@ -9,11 +9,17 @@
 
 html {
 	font-size: 62.5%;
+	--size: 1fr;
 }
 
 body {
 	box-sizing: border-box;
 	padding: 0rem;
+}
+
+html,
+body {
+	height: 100%;
 }
 
 /* TYPOGRAPHY */
@@ -34,83 +40,61 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.wrapper {
 
+/* SECTIONS */
+
+.wrapper {
+	height: 100%;
 	display: grid;
-	grid-template-columns: 100px 1fr 80% 1fr 100px;
-	grid-template-rows: 2fr 1fr 60% 5fr;
+	grid-template-columns: 10rem 1fr 10rem;
+	grid-template-rows: 15% auto 20%;
 	grid-gap: 1rem;
-
+	padding: 3rem 0;
+	position: relative;
 }
 
-* {
-	box-sizing: border-box;
+.wrapper > div,
+.announcements > div,
+.posts > div {
+	/* border: 3px solid grey; */
 }
 
-.wrapper {
-	background-color: black;
-	font-family: sans-serif;
-}
-
-.wrapper > div {
-	border: 3px solid grey;
-}
-
-.box {
-	font-family: sans-serif;
-	color: white;
-	font-weight: bold;
-	text-align: center;
-}
-
-.clock {
-	grid-column: 3/4;
+.date-time {
+	grid-column: 2/3;
 	grid-row: 1/2;
-	display: grid;
-	grid-template-columns: 1fr auto 1fr;
-	align-items: middle;
-	font-size: 10vmin;
-}
-
-.date {
-	grid-column: 3/4;
-	grid-row: 2/3;
-	font-size: 5vmin;
+	font-weight: 600;
+	line-height: 1.3;
 }
 
 .marvin {
-	grid-column: 3/4;
-	grid-row: 3/4;
+	grid-column: 2/3;
+	grid-row: 2/3;
 }
 
 .announcements {
-	grid-column: 2/5;
-	grid-row: 4/4;
-	display: grid;
-	grid-template-rows: 1fr 1fr 1fr;
-	padding: 10px;
-}
-
-.posts {
-	display: grid;
-	grid-template-columns: : 10% 1fr;
-	grid-gap: 10px;
-
-}
-.posts img {
-	grid-column: 1/2;
-	/* max-width: 90%;
-	max-height: 90%; */
-	height: 50px;
-	width: 50px;
-}
-
-.post_text {
 	grid-column: 2/3;
-	font-size: 12px;
-	text-align: left;
+	grid-row: 3/3;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	padding: 1rem;
 }
-/* Clock elements css*/
+
+.active-link {
+	opacity: 0;
+}
+
+/* DATE-TIME */
+
+.clock {
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
+	align-items: middle;
+	font-size: 10rem;
+}
+
+.date {
+	font-size: 5rem;
+}
 
 .hour {
 	grid-column: 1/2;
@@ -119,30 +103,42 @@ body {
 
 .colon {
 	grid-column: 2/3;
+	animation: blink 2s steps(3, start) infinite;
 }
 
 .minutes {
 	text-align: left;
 }
 
-.colon {
-  -webkit-animation: blink 2s steps(3, start) infinite;
-  -moz-animation:    blink 2s steps(3, start) infinite;
-  -o-animation:      blink 2s steps(3, start) infinite;
-  animation:         blink 2s steps(3, start) infinite;
+/* ANNOUNCEMENTS */
+
+.posts {
+	display: grid;
+	grid-template-columns: 15% 1fr;
+	grid-template-rows: 1fr;
+	grid-gap: 1rem;
 }
 
+.posts > div {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
+.posts img{
+	grid-column: 1/2;
+	height: 7rem;
+}
 
-@-webkit-keyframes blink {
-  to { visibility: hidden; }
+.post_text {
+	display: block;
+	grid-column: 2/3;
+	font-size: 2rem;
+	text-align: left;
 }
-@-moz-keyframes blink {
-  to { visibility: hidden; }
-}
-@-o-keyframes blink {
-  to { visibility: hidden; }
-}
+
+/* ANIMATIONS */
+
 @keyframes blink {
   to { visibility: hidden; }
 }
