--- a/css/fullcalendar.css
+++ b/css/fullcalendar.css
@@ -3,7 +3,7 @@
  * Docs & License: https://fullcalendar.io/
  * (c) 2017 Adam Shaw
  */
-/* 
+/*
 
 .fc {
 	direction: ltr;
@@ -240,7 +240,7 @@ hr.fc-divider {
 	border-collapse: collapse;
 	border-spacing: 0;
 	font-size: 1em; /* normalize cross-browser */
-	color: #72ff72;
+	color: white;
 }
 
 .fc th {
@@ -712,7 +712,7 @@ TODO: more distinction between this file and common.css
 }
 
 .fc-unthemed td.fc-today {
-	background: #fcf8e3;
+	background: rgba(115, 148, 214, 0.5);
 	color: black;
 }
 
