--- a/dev-css/base.css
+++ b/dev-css/base.css
@@ -90,6 +90,24 @@ body {
     opacity: 0;
 }
 
+/* POPUP */
+
+.popup {
+	height: 100vh;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.9);
+	z-index: 1000;
+	position: fixed;
+	transition: all .3s;
+	justify-content: center;
+}
+
+.popup > div {
+	width: 80rem;
+}
+
 /* STUDENT SEARCH */
 
 .popup .student-form button {
