tidying up/removing button before mirror deployment

--- a/sass/components/_news.scss
+++ b/sass/components/_news.scss
@@ -1,25 +1,23 @@
-
 /* news css */
-.NEWS {
+.news {
 	font-size: 2rem;
 	text-align: left;
 	hyphens: auto;
   padding-bottom: 4rem;
-
 }
 
-.NEWS .source {
+.news .source {
 	font-style: italic;
   font-size: 2.5rem;
 	color: #aab5f3;
 }
-.NEWS .title {
+.news .title {
 	font-size: 2.5rem;
   font-weight: bold;
   padding-bottom: 0.8rem;
 	/* padding-left: 2rem; */
 }
 
-.NEWS .description {
+.news .description {
 	padding-left: 2rem;
 }
