--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -35,6 +35,7 @@ body {
 }
 
 .center-div {
+	max-width: 75%;
 	position: absolute;
     top: 50%;
     left: 50%;
@@ -59,7 +60,7 @@ body {
     font-size: 5rem;
     display: flex;
   align-items: center;
-  justify-content: center 
+  justify-content: center;
 }
 
 .content p {
@@ -105,7 +106,7 @@ body {
 }
 
 .popup > div {
-	width: 80rem;
+	max-width: 80%;
 }
 
 /* STUDENT SEARCH */
