--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/help";
 @import "components/maps";
 @import "components/news";
+@import "components/photobooth";
 @import "components/projects";
 @import "components/student";
 @import "components/weather";
