--- a/sass/components/_cantina.scss
+++ b/sass/components/_cantina.scss
@@ -1,11 +1,11 @@
 /* CANTINA */
 
 .cantina-wrapper {
-	font-size: 1.8rem;
+	font-size: 2.4rem;
 }
 
 .cantina-wrapper .spacing {
-	height: 2.5rem;
+	height: 4rem;
 }
 
 .cantina-wrapper .meal {
@@ -22,7 +22,7 @@
 }
 
 #cantina-greet {
-	font-size: 2.8rem;
-	text-decoration: underline;
+	font-size: 3rem;
+	font-weight: 700;
 	text-transform: uppercase;
 }
