updated photoBooth from Pi

--- a/sass/components/_photobooth.scss
+++ b/sass/components/_photobooth.scss
@@ -2,3 +2,12 @@
     width: 51.2rem;
     height: 38.4rem;
 }
+
+.count_down {
+align-self: flex-start;
+padding-top: 50px;
+}
+
+.count_down p {
+font-size: 6rem;
+}
