Bigger picture for missing student on map, processing gif and more efficient weather and forecast, fixed student info call, clear content added to buildPopup

--- a/sass/components/_maps.scss
+++ b/sass/components/_maps.scss
@@ -93,6 +93,5 @@
 	margin-left: 50%;
 	transform: translate(-50%, -50%);
 	grid-row: 1/2;
-	max-width: 20%;
-	max-height: 20%;
+	max-height: 28rem;
 }
