fixed css for photobooth usability

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -153,6 +153,15 @@ body {
 	font-size: 3rem;
 }
 
+/* QR CODE */
+.qr {
+	font-size: 3.6rem;
+}
+
+.qr img{
+	height: 24rem;
+	width: 24rem;
+}
 
 /* DEVELOPER BUTTONS */
 body .developer {
