hey marvin, what's up?

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/forecast";
 @import "components/fullcalendar";
 @import "components/help";
+@import "components/howAreYou";
 @import "components/maps";
 @import "components/news";
 @import "components/photobooth";
