small fixes for joke

--- a/sass/components/_joke.scss
+++ b/sass/components/_joke.scss
@@ -4,13 +4,11 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
 .png img {
     height: 60px;
 }
+
 .text {
-    left: 50%;
-    font-size: 24px;
-    position: absolute;
-    top: 50%;
-    transform: translateX(-50%);
+    font-size: 3rem;
 }
